# ProjetDeJeuDeDame

./: CMakeLists.txt  CMakeLists.txt.user.52e2998.4.9-pre1  README.md  TraductionEN.ts  TraductionFR.ts  board.cpp  board.h  checkerscontroller.cpp  checkerscontroller.h  dames.cpp  dames.h  dames.ui  imageicon.qrc  main.cpp  square.cpp  square.h
icones/: AproposQt.txt
